refactor: betten resource files

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,14 +1,25 @@
 {
-    "login_failed": "Username or password is wrong",
-    "login_recently": "You logged in recently",
-    "register_new": "Please confirm your account",
-    "user_email_key": "Please provide different credentials",
-    "email.confirmation.title": "Welcome SimpleTodo User!",
-    "email.confirmation.subject": "SimpleTodo Account Confirmation Email",
-    "email.confirmation.body": "Please confirm your account to use SimpleTodo",
-    "email.confirmation.button_name": "confirm",
-    "email_sent_resp_confirmation": "If your email matches confirmation email will be sent",
-    "success": "Operation successful",
-    "fail": "Operation failed",
-    "email.confirmation.warning": "You have 1 hour to confirm your account"
+	"email": {
+		"reset_pwd": {
+			"title": "Hello SimpleTodo User!",
+			"subject": "SimpleTodo Reset Password Email",
+			"body": "Please follow that link to reset your SimpleTodo account's password",
+			"button_name": "reset",
+			"warning": "You have 1 hour to reset your password.\nIf you do not send this request ignore this emai"
+		},
+		"confirmation": {
+			"title": "Welcome SimpleTodo User!",
+			"subject": "SimpleTodo Account Confirmation Email",
+			"body": "Please confirm your account to use SimpleTodo",
+			"button_name": "confirm",
+			"warning": "You have 1 hour to confirm your account"
+		}
+	},
+	"login_failed": "Username or password is wrong",
+	"login_recently": "You logged in recently",
+	"register_new": "Please confirm your account",
+	"user_email_key": "Please provide different credentials",
+	"email_sent_resp": "If your email matches email will be sent",
+	"success": "Operation successful",
+	"fail": "Operation failed"
 }
