--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -5,7 +5,7 @@
 			"subject": "SimpleTodo Reset Password Email",
 			"body": "Please follow that link to reset your SimpleTodo account's password",
 			"button_name": "reset",
-			"warning": "You have 1 hour to reset your password.\nIf you do not send this request ignore this emai"
+			"warning": "You have 1 hour to reset your password.If you do not send this request ignore this emai"
 		},
 		"confirmation": {
 			"title": "Welcome SimpleTodo User!",
