--- a/public/locales/tr.json
+++ b/public/locales/tr.json
@@ -15,6 +15,9 @@
             "warning": "You have 1 hour to confirm your account"
         }
     },
+    "todo": {
+		"not_permissible":"Bu koleksiyonu görebilmek için yeterli izinleriniz yok"
+	},
     "login_failed": "Kullanici adi veya sifre yanlis",
     "login_recently": "Yakin zamanda giris yaptiniz lutfen bekleyiniz",
     "register_new": "Lutfen hesabinizi aktive ediniz",
